--- a/webapp/WEB-INF/views/course/c_writeForm.html
+++ b/webapp/WEB-INF/views/course/c_writeForm.html
@@ -3,7 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>코스 등록</title>
+<!-- css -->
+<link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="../../../assets/css/course.css">
+
+<!-- 자바스크립트 -->
+<script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
 <div id="wrap">
@@ -32,7 +38,7 @@
 				</tr>
 				<tr>
 					<td>
-						<img src="../../../assets/image/course/!.png" height="18px">
+						<span class="glyphicon glyphicon-info-sign"></span>
 						<p class="guide">
 							주소를 검색하면 아래에 지도가 표시됩니다.
 						</p>
@@ -88,7 +94,7 @@
 							<label for="bicycle">자전거</label>
 							
 							<input type="radio" name="events" id="draw">
-							<label for="draw">그림그리기</label>
+							<label for="draw">그림</label>
 							
 						</td>
 					</tr>
