--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -6,6 +6,7 @@
 <head>
 <meta charset="UTF-8">
 <title>마이페이지</title>
+<link rel="stylesheet" href="../../../assets/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="../../../assets/css/my-page.css">
 
 </head>
