--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>나의 코스 보기</title>
+<link rel="stylesheet" href="../../../assets/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="../../../assets/css/my-page.css">
 
 </head>
