--- a/webapp/WEB-INF/views/course/r_writeForm.html
+++ b/webapp/WEB-INF/views/course/r_writeForm.html
@@ -90,9 +90,10 @@
 					
 					
 					<td>
+					
 						<!-- 지도 -->
 						<div id="map">
-							<img src="../../../assets/image/course/map.jpg" height="300px">
+							<img src="../../../assets/image/course/map.jpg">
 						</div>
 					</td>
 				</tr>
