--- a/webapp/assets/css/course.css
+++ b/webapp/assets/css/course.css
@@ -21,8 +21,8 @@ input[type=radio] {display:none;}
 }
 
 /* =======================content======================= */
-/* p 태그 사이즈 */
-#content .course-form p {font-size: 15px; margin: 0px 10px 0px 0px;}
+/* p 태그 설정 */
+#content .course-form p {font-size: 15px; margin: 0px 10px 0px 0px; padding: 0px;}
 
 /* 테이블 선 */
 #content .course-form {
@@ -74,6 +74,12 @@ input[type=radio] {display:none;}
 }
 .course-form .course-info > div {
 	margin: 12px 0px;
+}
+/* 지도이미지 (나중에 구글지도로 변경!!!) */
+.course-form #map img {
+	width: 100%;
+	height: 100%;
+	vertical-align: top;
 }
 
 /* 텍스트박스 */
