코스등록, 기록작성 틀만 완성

--- a/webapp/WEB-INF/views/course/c_writeForm.html
+++ b/webapp/WEB-INF/views/course/c_writeForm.html
@@ -105,12 +105,12 @@
 						<td>
 							<div>
 								<input type="text" class="txt-short">
-								
-								<input type="radio" name="distance" id="m" checked>
-								<label for="m">m</label>
-								
-								<input type="radio" name="distance" id="km">
+
+								<input type="radio" name="distance" id="km" checked>
 								<label for="km">km</label>
+								
+								<input type="radio" name="distance" id="m">
+								<label for="m">m</label>
 									
 							</div>
 						</td>
