--- a/webapp/WEB-INF/views/course/r_writeForm.html
+++ b/webapp/WEB-INF/views/course/r_writeForm.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="../../../assets/css/course.css">
 
 <!-- 자바스크립트 -->
-<script type="text/javascript" src="/boots/assets/js/jquery/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="/boots/assets/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
 <div id="wrap">
@@ -61,19 +61,16 @@
 							
 							<div>
 								<p>거리</p>
-								
-								<input type="text" class="txt-short">
-								
-								<div class="box">m</div>
-								<div class="box blue">km</div>
+								<h3>1</h3>
+								<p>km<p>
+								<!-- <p>m</p> -->
 							</div>
 							
 							<div>
 								<p>예상 시간</p>
-								
-								<input type="text" class="txt-short">
+								<h3>0</h3>
 								<p>시간</p>
-								<input type="text" class="txt-short">
+								<h3>30</h3>
 								<p>분</p>
 							</div>
 							
@@ -211,9 +208,12 @@
 		<div class="course-form">
 			<h2>사진 등록</h2>
 			
-			<div class="course-pic">
-				<p>코스와 관련된 사진을 등록해주세요.</p>
-				<button>사진 추가하기</button>
+			<div id="course-pic">
+				<div>
+					<img src="../../../assets/image/course/photo.png">
+					<p>코스와 관련된 사진을 등록해주세요.</p>
+					<button>사진 추가하기</button>
+				</div>
 			</div>
 		</div>
 		
