--- a/webapp/WEB-INF/views/course/c_viewForm.html
+++ b/webapp/WEB-INF/views/course/c_viewForm.html
@@ -3,7 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>코스 정보 상세보기</title>
-<link rel="stylesheet" href="../../assets/css/clearfix.css">
+<!-- css -->
+<link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="../../../assets/css/course.css">
+
+<!-- 자바스크립트 -->
+<script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
 
