--- a/webapp/WEB-INF/views/best/best.html
+++ b/webapp/WEB-INF/views/best/best.html
@@ -30,49 +30,26 @@ h3 {
 </head>
 <body>
 
-	<div id="wrap">
-	
-		<header>
-		<div id="main-header">
-			<h1>
-				<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\joalogo.jpg" />
-			</h1>
-		</div>
-		<!-- /header -->
+	<div id="header">
+		<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
 		
-
-	<nav>
-		<div class="main-nav" id="main-navmenu">
-			
-			<div id="nav-content">
-				<a href="/Map" class="Map_link"> 
-				<span class="Map_name" data-hover>지도</span>
-				</a>
-			</div>
-
-			<div id="nav-content">
-				<a href="/Best" class="Best_link"> 
-				<span class="Best_name"	data-hover>베스트</span>
-				</a>
-			</div>
-
-			<div id="nav-content">
-				<a href="" class="Noticeboard_link"> 
-				<span class="Noticeboard_name" data-hover>게시판</span>
-				</a>
-			</div>
-
-			<div id="nav-content">
-				<a href="" class="Noticeboard_link"> 
-				<span class="Noticeboard_name" data-hover>함께하기</span>
-				</a>
-			</div>
-
-		</div>
-	</nav>
-	<!-- /nav -->
-	</header>
-		<!-- /header -->
+		<div id="login">
+			<ul>
+				<li><a href="">회원가입</a></li>
+				<li><a href="">로그인</a></li>
+			</ul>
+		</div> <!-- login -->
+		
+		<div id="nav">
+			<ul>
+				<li><a href="../together/together.html">함깨하기</a></li>
+				<li><a href="../board/board.html">게시판</a></li>
+				<li><a href="../best/best.html">베스트</a></li>
+				<li><a href="../map/map.html">지도</a></li>
+			</ul>
+		</div> <!-- nav -->
+	</div> <!-- header -->
+		
 
 		<h3>☆ 좋아요 Best</h3>
 		
@@ -117,12 +94,35 @@ h3 {
 			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
 	
 			<input type='button' class='btn-next' name='btn-next' value='>'>
-			
-			
 		<!-- /context -->
 
 
+
+	<!-- 푸터 자리 -->
+		<br>
+		<div class="footer">
+			<div class="footer-text">
+				<p>주식회사 조아</p>
+				<p>대표 : 최보승</p>
+				<p>사업자 번호 : 123-456-789</p>
+				<p>서울특별시 관악구 봉천동 862 - 1</p>
+				<br>
+				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
+					공휴일 휴무)</p>
+				<p>tel. 02 - 1111 - 1111</p>
+				<p>fax. 02 - 1111 - 1111</p>
+				<p>email. joa@joa.co.kr</p>
+			</div>
+			<br>
+			<div class="footer-btn">
+				<button id="footerbtn" type="button">자주묻는 질문</button>
+				<button id="footerbtn" type="button">1:1 문의</button>
+			</div>
+			<br>
+			<hr class="my-hr1">
+			<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+
+		</div>
 		<!-- /footer -->
-	</div>
 </body>
 </html>
