--- a/webapp/assets/css/best.css
+++ b/webapp/assets/css/best.css
@@ -33,7 +33,7 @@
 
 #header #login ul li {
 	float: right;
-	margin: 13px 16px 13px 16px;
+	margin: 13px 15px 13px 15px;
 	font-size: 14px;
 	font-weight: 700;
 }
@@ -45,3 +45,52 @@
 
 
 
+/*----------------- 푸터 스타일 -----------------*/
+.footer{
+	justify-content: space-between;
+	line-height: 18px;
+	font-size: 12px;
+	color: rgb(160, 160, 160);
+	background-color: rgb(55, 55, 55);
+	/* white-space: pre-wrap; 다방에 있어서 끌고 왔으나 와장창됨
+		스페이스와 탭, 줄바꿈, 자동줄바꿈을 어떻게 처리할지 정하는 속성*/
+}
+
+.footer-text {
+	padding-top: 20px;
+	padding-left: 15px;
+
+}
+
+#footer-Copyright {
+    display: block;
+	line-height: 18px;
+	margin-top: 20px;
+	padding: 5px 0px 20px 15px;
+}
+
+.my-hr1 {
+	border: 0;
+	height: 1px;
+	width : 99%;
+	background-color: rgb(123, 118, 118);
+}
+/* ---------------------------- 푸터 버튼 -----------------------------------*/
+.footer-btn{
+	padding: 0px 9px;
+	
+}
+
+#footerbtn {
+	border: 0;
+	outline: 0;
+	border-radius: 2px;
+	height: 30px;
+	padding: 0px 9px;
+	font-size: 12px;
+	color: rgb(229, 229, 229);
+	background-color: rgb(81, 81, 81);
+}
+
+
+/*----------------------------------------------------- 베스트 상세페이지 ----------------------------------------------------- */
