--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -2,7 +2,9 @@
 @import "clearfix.css";
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
-/****************************header****************************/
+/*----------------------------------------------------- 메인(Main) ----------------------------------------------------- */
+
+/**************************** header ****************************/
 #header {
 	max-width: 100%;
 	height: 80px;
@@ -38,19 +40,7 @@
 	font-weight: 700;
 }
 
-/*----------------------------------------------------- 메인(Main) ----------------------------------------------------- */
-ㄴ
-/*----------------- 헤더 스타일 -----------------*/
-span {
-	font-size: 16px;
-}
-
-.main-text {
-		padding: 12px;
-		font-size: 14px;
-		}
-		
-/*----------------- 사진 편집 -----------------*/		
+/*--------------------------- 사진 편집 ----------------------------*/		
 .slider{
     width: 1200px;
     height: 613px;
@@ -146,7 +136,7 @@ ul.imgs li{
 }
 
 
-/*----------------- 메인 텍스트 -----------------*/
+/*---------------------------- 메인 텍스트 -----------------------------*/
 .main-text{
 	font-size: 14px;
 	color: rgb(117, 117, 117);
@@ -157,6 +147,8 @@ ul.imgs li{
 }
 
 
+
+/*---------------------------- footer -----------------------------*/
 
 /*----------------- 푸터 스타일 -----------------*/
 .footer{
@@ -169,30 +161,38 @@ ul.imgs li{
 		스페이스와 탭, 줄바꿈, 자동줄바꿈을 어떻게 처리할지 정하는 속성*/
 }
 
-p{
-	padding-top: 5px;
+.footer-text {
+	padding-top: 20px;
 	padding-left: 15px;
+
 }
 
-/* 푸터 버튼 */
+#footer-Copyright {
+    display: block;
+	line-height: 18px;
+	margin-top: 20px;
+	padding: 5px 0px 20px 15px;
+}
+
+.my-hr1 {
+	border: 0;
+	height: 1px;
+	width : 99%;
+	background-color: rgb(123, 118, 118);
+}
+/* ---------------------------- 푸터 버튼 -----------------------------------*/
 .footer-btn{
-	font-size: 12px;
-	color: rgb(229, 229, 229);
 	padding: 0px 9px;
+	
 }
 
-button {
+#footerbtn {
 	border: 0;
 	outline: 0;
 	border-radius: 2px;
-	padding: 0px 9px;
 	height: 30px;
-	background-color: rgb(57, 107, 243);
+	padding: 0px 9px;
+	font-size: 12px;
+	color: rgb(229, 229, 229);
+	background-color: rgb(81, 81, 81);
 }
-
-/*-------------------------------------------------------- 베스트 -------------------------------------------------------- */
-
-
-
-
-/*----------------------------------------------------- 베스트 상세페이지 ----------------------------------------------------- */
