--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -36,7 +36,7 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../../assets/image/my-page/menu.png">
+			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
 			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></p>
 		</div>
 		
