--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -11,9 +11,9 @@
 	<div class="menuBar">
 		<div class="menu1">
 			<ol>
-				<li id="mypage">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></li>
-				<li id="list">나의 코스 보기</li>
-				<li id="list">나의 기록 보기</li>
+				<li id="mypage"><a href="./main.html">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></a></li>
+				<li id="list"><a href="./my-course.html">나의 코스 보기</a></li>
+				<li id="list"><a href="./my-report.html">나의 기록 보기</a></li>
 			</ol>
 		</div>
 		
@@ -24,15 +24,15 @@
 					<img id="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
 					<img id="minus-btn" src="../../../assets/image/my-page/minus.png">
 				</li>
-				<li id="list">서울 근교 코스</li>
-				<li id="list">웃겨 자빠질 코스</li>
-				<li id="list">기어가는 코스</li>
+				<li id="list"><a href="">서울 근교 코스</a></li>
+				<li id="list"><a href="">웃겨 자빠질 코스</a></li>
+				<li id="list"><a href="">기어가는 코스</a></li>
 			</ol>
 		</div>
 		
 		<div class="menu3">
 			<ol>
-				<li id="members"><p>회원정보수정 <img id="setting" src="../../../assets/image/my-page/setting.png"></p></li>
+				<li id="members"><p><a href="">회원정보수정 <img id="setting" src="../../../assets/image/my-page/setting.png"></a></p></li>
 			</ol>
 		</div>
 	</div>
