--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -39,7 +39,7 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../../assets/image/my-page/menu.png">
+			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
 			<p id="title">나의 기록 보기 <img id="myHome" src="../../../assets/image/my-page/diary.png"></p>
 		</div>
 		
