--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -39,7 +39,7 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../../assets/image/my-page/menu.png">
+			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
 			<p id="title">(즐겨찾기이름) 
 				<img id="myHome" src="../../../assets/image/my-page/star.png">&nbsp;
 				<img id="myHome" src="../../../assets/image/my-page/edit.png">
