--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -42,7 +42,7 @@
 			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
 			<p id="title">(즐겨찾기이름) 
 				<img id="myHome" src="../../../assets/image/my-page/star.png">&nbsp;
-				<img id="myHome" src="../../../assets/image/my-page/edit.png">
+				<a href=""><img id="edit-btn" src="../../../assets/image/my-page/edit.png"></a>
 			</p>
 		</div>
 		
