--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -7,24 +7,24 @@
 /**************************************************************************/
 .header {background-color: #F1F1F1; text-align: center;   padding: 20px;}
 
-.subHeader {height: 90px; border: 1px solid #808080; text-align: center;   padding: 20px;}
-.subHeader #menuBar-open {width: 50px; height: 50px; float: left; border: 1px solid #73AD21;  margin: 20px;}
-.subHeader #title {height: 50px; line-height:50px; text-align: center;  border: 1px solid #73AD21;
-					font:46px "나눔고딕"; font-weight:bold; margin:20px;}
-.subHeader #myHome {width: 50px; height: 50px;}
-
+/* .subHeader {height: 90px; border: 1px solid #808080; text-align: center;   padding: 20px;} */
+.subHeader #menuBar-open {width: 48px; height: 48px; float: left; margin-left:50px;}
+.subHeader #title {height: 48px; line-height:48px; text-align: center;
+					font-size:40px; font-weight:bold; margin:20px;}
+.subHeader #myHome {width: 48px; height: 48x; vertical-align:bottom;}
+.subHeader #edit-btn {width: 40px; height:40px; vertical-align:center;}
 
 
 .resultView {min-width:1200px; position: absolute; left: 50%; transform: translateX(-50%); display: center;}
-.resultList {display:inline-block; text-align:center; border:solid 1px #111111; padding: 50px 33px 0px 33px;}
+.resultList {display:inline-block; text-align:center;  padding: 50px 33px 0px 33px;}
 
-.resultList #listTitle {display:center; font-size: 28px; text-align:left; border: 1px solid #73AD21; padding:0px; margin:0px 0px 20px 0px;}
-.resultList ol { width:100%; display :center; border: 1px solid #73AD21;}
-.resultList li {width:(25%-margin); float : left ; list-style: none; border: 1px solid #73AD21; margin:0px 10px 40px 10px}
+.resultList #listTitle {display:center; font-size: 18px; text-align:left;  padding:0px; margin-bottom:10px;}
+.resultList ol { width:100%; display :center; }
+.resultList li {width:(25%-margin); float : left ; list-style: none; margin:0px 10px 40px 10px}
 .resultList li #imgBox {width:280; height: 186px ;}
-.resultList li #textBox {text-align:left; width:(100%-padding) ; height: 50px ;  border: 1px solid #73AD21; padding:10px;}
+.resultList li #textBox {text-align:left; width:(100%-padding) ; height: 60px ; padding-left:8px;}
 .resultList li #textBox #courseName {font-weight:bold; font-size:16px; line-height: 30px; }
-.resultList li #textBox #courseInfo {font-size:14px; color: gray;}
+.resultList li #textBox #courseInfo {font-size:13px; color: gray;}
 
 
 
