--- a/webapp/assets/css/board.css
+++ b/webapp/assets/css/board.css
@@ -29,7 +29,7 @@ ul, ol, li	{
 
 /*********************** 검색 ***********************/
 
-#top_aside {margin-left: 830px;}
+#top_aside {margin-left: 1005px;}
 #keyword {height: 20px}
 /** 필터링 항목 **/
 #option {
@@ -44,6 +44,8 @@ ul, ol, li	{
 #search {
 	width: 50px;
 	height: 30px;
+	background-color: #fff;
+	border-radius: 3px;
 }
 
 /******************** 게시판 테이블 ********************/
