--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -8,34 +8,71 @@
 
 </head>
 <body>
-	<div class="menuBar">
-		<div class="menu1">
-			<ol>
-				<li id="mypage"><a href="./main.html">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></a></li>
-				<li id="list"><a href="./my-course.html">나의 코스 보기</a></li>
-				<li id="list"><a href="./my-report.html">나의 기록 보기</a></li>
-			</ol>
-		</div>
+	<div id="wrap">
 		
-		<div class="menu2">
-			<ol>
-				<li id="bookmark">즐겨찾기 <img id="bmStar" src="../../../assets/image/my-page/star.png"></li>
-				<li id="bookmark-btn">
-					<img id="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
-					<img id="minus-btn" src="../../../assets/image/my-page/minus.png">
-				</li>
-				<li id="list"><a href="">서울 근교 코스</a></li>
-				<li id="list"><a href="">웃겨 자빠질 코스</a></li>
-				<li id="list"><a href="">기어가는 코스</a></li>
-			</ol>
-		</div>
+		<!--메인 해더 자리 -->
+		<div id="header">
+			<img id="logo" src="../../../assets/image/main/logo.jpg">
+			
+			<div id="login">
+				<ul>
+					<li><a href="">회원가입</a></li>
+					<li><a href="">로그인</a></li>
+				</ul>
+			</div> <!-- login -->
+			
+			<div id="nav">
+				<ul>
+					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../board/board.html">게시판</a></li>
+					<li><a href="../best/best.html">베스트</a></li>
+					<li><a href="../map/map.html">지도</a></li>
+				</ul>
+			</div> <!-- nav -->
+		</div> <!-- header -->
 		
-		<div class="menu3">
-			<ol>
-				<li id="members"><p><a href="">회원정보수정 <img id="setting" src="../../../assets/image/my-page/setting.png"></a></p></li>
-			</ol>
+		
+		
+		
+		<div class="menuBar">
+			<div class="menu1">
+				<ol>
+					<li id="mypage">
+						<a href="./main.html">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></a>
+					</li>
+					<li id="bookmark-btn">
+						<a href=""><img id="menuBar-close" src="../../../assets/image/my-page/menu.png"></a>
+					</li>
+					<li id="menuList"><a href="./my-course.html">나의 코스 보기</a></li>
+					<li id="menuList"><a href="./my-report.html">나의 기록 보기</a></li>
+				</ol>
+			</div>
+			
+			<div class="menu2">
+				<ol>
+					<li id="bookmark">즐겨찾기 <img id="bmStar" src="../../../assets/image/my-page/star.png"></li>
+					<li id="bookmark-btn">
+						<img id="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
+						<img id="minus-btn" src="../../../assets/image/my-page/minus.png">
+					</li>
+					<li id="menuList"><a href="">서울 근교 코스</a></li>
+					<li id="menuList"><a href="">웃겨 자빠질 코스</a></li>
+					<li id="menuList"><a href="">기어가는 코스</a></li>
+				</ol>
+			</div>
+			
+			<div class="menu3">
+				<ol>
+					<li id="members"><p><a href="">회원정보수정 <img id="setting" src="../../../assets/image/my-page/setting.png"></a></p></li>
+				</ol>
+			</div>
 		</div>
+	
+	<!-- 메인 푸터  자리-->
+		
+	
 	</div>
+	<!-- //center-content -->
 
 </body>
 </html>
