--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -8,10 +8,10 @@
 .header {background-color: #F1F1F1; text-align: center;   padding: 20px;}
 
 /* .subHeader {height: 90px; border: 1px solid #808080; text-align: center;   padding: 20px;} */
-.subHeader #menuBar-open {width: 48px; height: 48px; float: left; margin-left:50px;}
+.subHeader #menuBar-open {width: 30px; height:30px; float: left; margin-left:40px;}
 .subHeader #title {height: 48px; line-height:48px; text-align: center;
-					font-size:40px; font-weight:bold; margin:20px;}
-.subHeader #myHome {width: 48px; height: 48x; vertical-align:bottom;}
+					font-size:36px; font-weight:bold; margin:20px;}
+.subHeader #myHome {width: 45px; height: 45x; vertical-align:bottom;}
 .subHeader #edit-btn {width: 40px; height:40px; vertical-align:center;}
 
 
@@ -19,12 +19,12 @@
 .resultList {display:inline-block; text-align:center;  padding: 50px 33px 0px 33px;}
 
 .resultList #listTitle {display:center; font-size: 18px; text-align:left;  padding:0px; margin-bottom:10px;}
-.resultList ol { width:100%; display :center; }
-.resultList li {width:(25%-margin); float : left ; list-style: none; margin:0px 10px 40px 10px}
-.resultList li #imgBox {width:280; height: 186px ;}
-.resultList li #textBox {text-align:left; width:(100%-padding) ; height: 60px ; padding-left:8px;}
-.resultList li #textBox #courseName {font-weight:bold; font-size:16px; line-height: 30px; }
-.resultList li #textBox #courseInfo {font-size:13px; color: gray;}
+.resultList ol {width:100%; display :center; }
+.resultList li {width:(25%-margin);float : left ; list-style: none; margin:0px 10px 30px 10px}
+.resultList li #courseImg {width:260px; height: 186px ; padding:0px;}
+.resultList li #textBox {text-align:left; width:(100%-padding) ; height: 60px ; padding-left:5px;}
+.resultList li #textBox #courseName {font-weight:bold; font-size:16px; line-height: 20px; }
+.resultList li #textBox #courseInfo {font-size:13px; color: gray; line-height: 16px;}
 
 
 
@@ -34,23 +34,27 @@
 /* 마이페이지-메뉴바 *************************************************************/
 /**************************************************************************/
 .menuBar { width:400px; min-height:600px; background-color:lightyellow; text-align:left; line-height: 50px}
-.menuBar #list {font-size: 20px; line-height:50px;}
+.menuBar #menuList {font-size: 14px; line-height:50px;}
 
 
 .menuBar .menu1 {width:(100%-padding); height:(20%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
-.menuBar .menu1 #mypage {font-size: 24px; font-weight:bold;}
-.menuBar #myHome {width: 24px; height: 24px;}
+.menuBar .menu1 #mypage {font-size: 18px; float:left; font-weight:bold;}
+.menuBar .menu1 #myHome {width: 20px; height: 20px;}
+.menuBar .menu1 #bookmark-btn {text-align:right}
+.menuBar .menu1 #menuBar-close {width: 20px; height: 20px;}
+
 
 .menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px;}
-.menuBar .menu2 #bookmark {font-size: 24px; float:left; font-weight:bold;}
-.menuBar #bmStar {width: 24px; height: 24px;}
+.menuBar .menu2 #bookmark {font-size: 18px; float:left; font-weight:bold;}
+.menuBar #bmStar {width: 20px; height: 20px;}
+
 .menuBar .menu2 #bookmark-btn {text-align:right}
-.menuBar #plus-btn {width: 24px; height: 24px;}
-.menuBar #minus-btn {width: 24px; height: 24px;}
+.menuBar #plus-btn {width: 20px; height: 20px;}
+.menuBar #minus-btn {width: 20px; height: 20px;}
 
 .menuBar .menu3 {width:(100%-padding); height: (20%-padding); text-align:left;  padding:20px 30px; }
-.menuBar .menu3 #members {font-size: 24px; font-weight:bold; }
-.menuBar #setting {width: 24px; height: 24px;}
+.menuBar .menu3 #members {font-size: 18px; font-weight:bold; }
+.menuBar #setting {width: 20px; height: 20px; vertical-align:center;}
 
 
 
