--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -55,62 +55,86 @@
 				<p id="listTitle">최근 조회한 코스들</p>
 				<ol>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">신나는 코스</p>
-							<p id="courseInfo">홍길동 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">홍길동</p>
+								<p id="courseInfo">조회수2 * 22.07.01</p>
+						  	</div>
+						</a>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">이건아닌데...</p>
-							<p id="courseInfo">고길동 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">고길동</p>
+								<p id="courseInfo">조회수2 * 22.06.30</p>
+						  	</div>
+						</a>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">깐따삐야행성으로 가는 길</p>
-							<p id="courseInfo">둘리 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">깐따삐야 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수18 * 22.06.29</p>
+						  	</div>
+					  	</a>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">집에 가는 길</p>
-							<p id="courseInfo">김자바 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">집에 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수11 * 22.06.21</p>
+						 	</div>
+						</a>
 					</li>
 					
 					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">신나는 코스2</p>
-							<p id="courseInfo">홍길동 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">홍길동</p>
+								<p id="courseInfo">조회수2 * 22.07.01</p>
+						  	</div>
+						</a>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">이건아닌데...</p>
-							<p id="courseInfo">고길동 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">고길동</p>
+								<p id="courseInfo">조회수2 * 22.06.30</p>
+						  	</div>
+						</a>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">깐따삐야행성으로 가는 길</p>
-							<p id="courseInfo">둘리 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">깐따삐야 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수18 * 22.06.29</p>
+						  	</div>
+					  	</a>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">집에 가는 길</p>
-							<p id="courseInfo">김자바 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">집에 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수11 * 22.06.21</p>
+						 	</div>
+						</a>
 					</li>
 				</ol> 
 			</div>
@@ -121,35 +145,44 @@
 				
 				<ol>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">집에 가는 길</p>
-							<p id="courseInfo">김자바 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">홍길동</p>
+								<p id="courseInfo">조회수2 * 22.07.01</p>
+						  	</div>
+						</a>
 					</li>
-					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">학원 가는 길</p>
-							<p id="courseInfo">가나다 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">고길동</p>
+								<p id="courseInfo">조회수2 * 22.06.30</p>
+						  	</div>
+						</a>
 					</li>
-					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">법원 가는 길</p>
-							<p id="courseInfo">우영우 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">깐따삐야 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수18 * 22.06.29</p>
+						  	</div>
+					  	</a>
 					</li>
-					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">코스이름 없음</p>
-							<p id="courseInfo">아무개 * 2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">집에 가는 길</p>
+								<p id="courseInfo">둘리</p>
+								<p id="courseInfo">조회수11 * 22.06.21</p>
+						 	</div>
+						</a>
 					</li>
 				</ol>
 			</div>
